# venetucci-desktop

./: .gitignore  README.md  supabase_setup.sql
.github/workflows/: release.yml
frontend/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
